snap/tests/ui/no_specified_type.stderr
error: expected return type
 --> tests/ui/no_specified_type.rs:5:5
  |
5 |     fn no_type_specified() {}
  |     ^^^^^^^^^^^^^^^^^^^^^^
