snap/tests/ui/no_specified_type.rs
use snap::snapshot;

pub fn main() {
    #[snapshot]
    fn no_type_specified() {}
}
